TestRepo2/src/objects/Digital_Published_Asset__c.object
<CustomObject>
    <description>An object to track Assets which leverage Recipe DB. (Websites, mobile apps, etc.)</description>
    <fields>
        <fullName>API_External_ID__c</fullName>
        <displayFormat>DPA-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>API External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Default_Locale__c</fullName>
        <label>Default Locale</label>
        <picklist>
            <picklistValues>
                <fullName>EN-US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Digital_Published_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Website</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social App</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Digital Published Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>API_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Default_Locale__c</columns>
        <columns>Publisher__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Digital Published Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Published Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>